k8s/base/epgstation/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: epgstation
  name: epgstation
spec:
  clusterIP: None
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: epgstation
  type: ClusterIP
