k8s/base/epgstation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epgstation
spec:
  tls: []
  rules:
  - host: REPLACE_HERE
    http:
      paths:
      - backend:
          service:
            name: epgstation
            port:
              number: 80
        path: /
        pathType: Prefix
